tests/paczka1/fuzzy1/42689526.err
Error in line 2: URfdz9GQ S954 24,3
Error in line 19: Qx6cz S941 91,2
Error in line 20: Qx6cz S210 818,6
Error in line 23: S210 S941 38,7
Error in line 24: S210 S954 27,1
Error in line 29: gxlRcGvrLCR S210 11,2
